--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="nav-link link active" href="./index.html">Studio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link link active" href="./portfolio.html">Portfolio</a>
+              <a class="nav-link link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link link" href="">Contacts</a>
