--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
           >
           <ul class="nav-list list">
             <li class="nav-item">
-              <a class="nav-link link active" href="./index.html">Studio</a>
+              <a class="nav-link link" href="./index.html">Studio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link link active" href="./portfolio.html"
