--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
               >
             </li>
             <li class="address-item">
-              <a class="address-tel link" href="tel:+110001111111"
+              <a class="address-link link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
             </li>
